--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.html": "html",
         "main.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "holberton.h": "c"
     }
 }
